# FEL2

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
dependencies/: install_Armadillo.sh
doc/changes/: minor.txt
documentation/: References.md
include/FEL2/utils/: vector_norm.h
src/LinearAlgebra/sparse/: FEL2_linalg_sparsematrix.hpp
src/utils/: test.cc  vector_norm.h
tests/: Linalg_tests.cpp  maximum_norm_test  maximum_norm_test.cc
